2006-01-16  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tests/ns_base64encode.test: Basic tests for ns_base64encode
	and ns_base64decode
	* nsd/uuencode.c: Fixed appending of extra newline in certain
	line break situations. Fixes Bug #1407112.

2006-01-15  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd/connio.c:
	* nsd.nsd.h: This is experimental feature to use separate writer
	thread for sending large files to multiple clients. By default it 
	is disabled so nobody should be affected by this feature. Still need
	more testing but can be very usefull, keeping it in CVS makes it easier 
	to track then in local copy, i keep loosing local modifications
	all the time.
	
	* nsd/driver.c: Changes poolto from -1 to 60 seconds in DriverThread and
	SpolerThread to wake up from pool. Once a minute will not kill the server 
	but will ensure it will never get into race condition.

2006-01-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclmisc.c (NsTclHTUUEncodeObjCmd): properly handles
	binary strings. Fixes Bug #1405988.

	* nsd/driver.c (NsStopDrivers): does not attempt to trigger
	spooler pipe if spooler thread disabled.

2006-01-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	ATTENTION: Tcl compatibility affected.

	* include/ns.h:
	* nsd/conn.c:    
	* nsd/pathname.c:
	* nsd/tclcallbacks.c:
	* nsd/tclinit.c:
	* nsd/tclrequest.c:
	* nsd/tclsched.c:
	* nsd/url2file.c:
	* tests/ns_register_filter.test:
	* tests/ns_register_proc.test:
	* tests/url2file.test: Implemented RFE #1404901.

2006-01-11  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd.nsd.c:
	* nsd/tclcmds.c: Added spooler support which handles
	upload process in separate thread. During the uploading new command 
	ns_upload_stats is available which accepts full url with query
	parametrs of the uploading connection. On uploading finish, 
	statistics is cleared from the memory. Spooler can be disabled 