@@ -1,3 +1,8 @@
+2006-01-17  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* nsd/driver.c: Improved Writer thread support, now it is 
+        possible to have multiple writer thread for better performance.
+
 2006-01-16  Bernd Eidenschink  <eide@users.sourceforge.net>
 
 	* tests/ns_base64encode.test: Basic tests for ns_base64encode
